--- a/Styles/seq.css
+++ b/Styles/seq.css
@@ -1,7 +1,7 @@
-.sequencia {
+.sequencia { 
     margin-left: 450px;
     margin-top: 30px;
-}
+}/*Para títulos com duas sequências*/
 
 .capa {
     width: 184px;
