--- a/Styles/Chernobyl_seq.css
+++ b/Styles/Chernobyl_seq.css
@@ -5,6 +5,8 @@ h2{
 .Chernobyl img {
     width: 480px;
     height: 270px;
+
+    border-radius: 10px;
 }
 
 .sequencia4{
@@ -42,6 +44,7 @@ a{
     bottom: -15px; /*Não pode ser usando top*/
 
     width: 440px;
+    border-radius: 10px;
 
     display: inline-block;
     transition: transform .25s linear;
