--- a/Styles/seq.css
+++ b/Styles/seq.css
@@ -6,7 +6,7 @@
 .sequencia2 { 
     margin-left: 460px;
     margin-top: 20px;
-}/*Para títulos com duas sequências*/
+}/*Para tÃ­tulos com duas sequï¿½ncias*/
 
  .sequencia3{
      margin-top: 20px;
@@ -16,6 +16,8 @@
 .capa {
     width: 184px;
     height: 274px;
+
+    border-radius: 10px;
 }
 
 a {
@@ -39,8 +41,11 @@ a {
 .info {
     position: absolute;
     right: 35px;
-    bottom: -15px; /*Não pode ser usando top*/
+    bottom: -15px; /*Nï¿½o pode ser usando top*/
+    
     width: 145px;
+    border-radius: 10px;
+
     display: inline-block;
     transition: transform .25s linear;
     opacity: 0;
